--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="c322">C322 Data Centre and Cloud Management</string>
     <string name="c346">C346 Mobile App Development</string>
     <string name="c382">C382 IT Service Delivery</string>
+    <string name="goBack">Return</string>
 </resources>
