--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">My Modules</string>
-    <string name="c300">C300\nFYP Project</string>
-    <string name="c322">C322\nData Centre and Cloud Management</string>
-    <string name="c346">C346\nMobile App Development</string>
-    <string name="c382">C382\nIT Service Delivery</string>
+    <string name="c300">C300</string>
+    <string name="c322">C322</string>
+    <string name="c346">C346</string>
+    <string name="c382">C382</string>
     <string name="goBack">Return</string>
 </resources>
